--- a/scss/variable/_variable.scss
+++ b/scss/variable/_variable.scss
@@ -23,8 +23,8 @@ $default-black-color:#000000;
 @mixin style-h2 {
     font-family: 'dm-serif-display-400';
     color: #000000;
-    font-size: 52px;
-    line-height: 64px;
+    font-size: 40px;
+    line-height: 48px;
     font-weight: normal;
     margin: 0;
 }
